# jimage

./: .gitignore  CMakeLists.txt  INSTALL
json/: CMakeLists.txt
src/: CMakeLists.txt  ImageInfo.cpp  ImageInfo.h  message.h  test.cpp
src/client/: CMakeLists.txt  ImageInfo.cpp  ImageInfo.h  client.h  main_client.cpp
src/server/: CMakeLists.txt  main_server.cpp  server.h
